chore: remove redundant root files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Hide web build files from GitHub stats
+web/
+build/web/
+
